<resources>
    <string name="app_name">NearerToThee</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_todays_reading">TodaysReadingActivity</string>
    <string name="read_button">Read button</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Bookmark</string>
    <string name="title_activity_file_list">FileListActivity</string>
    <string name="app_label">Nearer To Thee</string>
    <string name="search_hint">Search keyword</string>
    <string name="title_activity_sample_search">SampleSearchActivity</string>
    <string name="button_search">Search</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_file_list2">FileListActivity2</string>
    <string name="no_data_available">Add some favorites!</string>
</resources>
